crates/bitnet-kernels/tests/snapshots/snapshot_wave30__snapshot_wave30__kernel_backend_all_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave30.rs
expression: backends
---
[
    CpuRust,
    Cuda,
    Hip,
    OneApi,
    OpenCL,
    CppFfi,
]
