crates/bitnet-kernels/tests/snapshots/snapshot_wave30__snapshot_wave30__kernel_backend_all_display.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave30.rs
expression: "output.join(\"\\n\")"
---
cpu-rust
cuda
hip
oneapi
opencl
cpp-ffi
