crates/bitnet-kernels/tests/snapshots/snapshot_wave30__snapshot_wave30__kernel_caps_cpu_scalar.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave30.rs
expression: caps
---
KernelCapabilities {
    cpu_rust: true,
    cuda_compiled: false,
    cuda_runtime: false,
    hip_compiled: false,
    hip_runtime: false,
    oneapi_compiled: false,
    oneapi_runtime: false,
    opencl_compiled: false,
    opencl_runtime: false,
    cpp_ffi: false,
    simd_level: Scalar,
}
