crates/bitnet-kernels/tests/snapshots/snapshot_wave30__snapshot_wave30__kernel_caps_cuda_avx2.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave30.rs
expression: caps
---
KernelCapabilities {
    cpu_rust: true,
    cuda_compiled: true,
    cuda_runtime: true,
    hip_compiled: false,
    hip_runtime: false,
    oneapi_compiled: false,
    oneapi_runtime: false,
    opencl_compiled: false,
    opencl_runtime: false,
    cpp_ffi: true,
    simd_level: Avx2,
}
