crates/bitnet-kernels/tests/snapshots/snapshot_wave30__snapshot_wave30__pipeline_config_gpu_enabled.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave30.rs
expression: cfg
---
PipelineConfig {
    num_layers: 24,
    hidden_dim: 2048,
    num_heads: 16,
    head_dim: 128,
    intermediate_dim: 5504,
    vocab_size: 32000,
    max_seq_len: 4096,
    use_gpu: true,
    fallback_to_cpu: false,
}
