crates/bitnet-kernels/tests/snapshots/snapshot_wave30__snapshot_wave30__pipeline_config_large_model.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave30.rs
expression: cfg
---
PipelineConfig {
    num_layers: 32,
    hidden_dim: 4096,
    num_heads: 32,
    head_dim: 128,
    intermediate_dim: 11008,
    vocab_size: 128256,
    max_seq_len: 2048,
    use_gpu: true,
    fallback_to_cpu: true,
}
