crates/bitnet-kernels/tests/snapshots/snapshot_wave30__snapshot_wave30__pipeline_stage_all_display.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave30.rs
expression: "output.join(\"\\n\")"
---
Embedding
RmsNorm
Attention
FeedForward
FinalNorm
LogitProjection
