crates/bitnet-kernels/tests/snapshots/snapshot_wave30__snapshot_wave30__simd_caps_none_detected.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave30.rs
expression: caps
---
SimdCapabilities {
    sse2: false,
    sse4_1: false,
    sse4_2: false,
    avx: false,
    avx2: false,
    avx512f: false,
    avx512bw: false,
    avx512vnni: false,
    fma: false,
    neon: false,
    arch: "unknown",
}
