crates/bitnet-kernels/tests/snapshots/snapshot_wave30__snapshot_wave30__simd_level_avx2_display.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave30.rs
expression: "format!(\"{}\", SimdLevel::Avx2)"
---
avx2
